--- a/template/testCase.njk
+++ b/template/testCase.njk
@@ -3,7 +3,7 @@ from utils.restClient import RequestClient
 from {{casePath}} import dataCases
 
 @allure.severity(allure.severity_level.{{severityLevel}})
-@allure.feature("{{feature}}")
+@allure.feature({{feature}})
 class {{funcNameSpace}}PageAPI:
     def test{{funcNameSpace}}Case(self):
 
